// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`initial state hides the section when there is no narrative 1`] = `
<li
  className="card-container"
>
  <div
    className="card"
  >
    <div
      className="card-left layout-column"
    >
      <h3
        className="to-detail"
      >
        <a
          aria-label="Complaint 9 9 9 9 0 9 0 9"
          href="detail/99990909"
        >
          99990909
        </a>
      </h3>
      <h4
        tabIndex="0"
      >
        Company name
      </h4>
      <span
        className="body-copy"
        dangerouslySetInnerHTML={
          Object {
            "__html": "ABC Corp",
          }
        }
        tabIndex="0"
      />
      <br />
      <h4
        tabIndex="0"
      >
        Company response to consumer
      </h4>
      <span
        className="body-copy"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Ipsum",
          }
        }
        tabIndex="0"
      />
      <br />
      <h4
        tabIndex="0"
      >
        Timely response?
      </h4>
      <span
        className="body-copy"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Yes",
          }
        }
        tabIndex="0"
      />
    </div>
    <div
      className="card-right layout-column"
    >
      <div
        className="layout-row"
      >
        <div
          className="layout-row"
        >
          <h4
            tabIndex="0"
          >
            Date received:
          </h4>
          <span
            className="body-copy"
          >
            <span>
              2/3/2013
            </span>
          </span>
        </div>
        <div
          className="spacer"
        />
        <div
          className="layout-row"
        >
          <h4
            tabIndex="0"
          >
            Consumer's state:
          </h4>
          <span
            className="body-copy"
            dangerouslySetInnerHTML={
              Object {
                "__html": "DC",
              }
            }
            tabIndex="0"
          />
        </div>
      </div>
      <br />
      <h4
        tabIndex="0"
      >
        Product
      </h4>
      <h3
        dangerouslySetInnerHTML={
          Object {
            "__html": "Beta",
          }
        }
        tabIndex="0"
      />
      <div
        className="layout-row"
      >
        <span
          className="body-copy subitem"
          tabIndex="0"
        >
          Sub-product:
        </span>
        <span
          className="body-copy"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Delta",
            }
          }
          tabIndex="0"
        />
      </div>
      <br />
      <h4
        tabIndex="0"
      >
        Issue
      </h4>
      <h3
        dangerouslySetInnerHTML={
          Object {
            "__html": "Alpha",
          }
        }
        tabIndex="0"
      />
      <div
        className="layout-row"
      >
        <span
          className="body-copy subitem"
          tabIndex="0"
        >
          Sub-issue:
        </span>
        <span
          className="body-copy"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Gamma",
            }
          }
          tabIndex="0"
        />
      </div>
    </div>
  </div>
</li>
`;

exports[`initial state hides the section when there is no sub-issue 1`] = `
<li
  className="card-container"
>
  <div
    className="card"
  >
    <div
      className="card-left layout-column"
    >
      <h3
        className="to-detail"
      >
        <a
          aria-label="Complaint 9 9 9 9 0 9 0 9"
          href="detail/99990909"
        >
          99990909
        </a>
      </h3>
      <h4
        tabIndex="0"
      >
        Company name
      </h4>
      <span
        className="body-copy"
        dangerouslySetInnerHTML={
          Object {
            "__html": "ABC Corp",
          }
        }
        tabIndex="0"
      />
      <br />
      <h4
        tabIndex="0"
      >
        Company response to consumer
      </h4>
      <span
        className="body-copy"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Ipsum",
          }
        }
        tabIndex="0"
      />
      <br />
      <h4
        tabIndex="0"
      >
        Timely response?
      </h4>
      <span
        className="body-copy"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Yes",
          }
        }
        tabIndex="0"
      />
    </div>
    <div
      className="card-right layout-column"
    >
      <div
        className="layout-row"
      >
        <div
          className="layout-row"
        >
          <h4
            tabIndex="0"
          >
            Date received:
          </h4>
          <span
            className="body-copy"
          >
            <span>
              2/3/2013
            </span>
          </span>
        </div>
        <div
          className="spacer"
        />
        <div
          className="layout-row"
        >
          <h4
            tabIndex="0"
          >
            Consumer's state:
          </h4>
          <span
            className="body-copy"
            dangerouslySetInnerHTML={
              Object {
                "__html": "DC",
              }
            }
            tabIndex="0"
          />
        </div>
      </div>
      <br />
      <h4
        tabIndex="0"
      >
        Product
      </h4>
      <h3
        dangerouslySetInnerHTML={
          Object {
            "__html": "Beta",
          }
        }
        tabIndex="0"
      />
      <div
        className="layout-row"
      >
        <span
          className="body-copy subitem"
          tabIndex="0"
        >
          Sub-product:
        </span>
        <span
          className="body-copy"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Delta",
            }
          }
          tabIndex="0"
        />
      </div>
      <br />
      <h4
        tabIndex="0"
      >
        Issue
      </h4>
      <h3
        dangerouslySetInnerHTML={
          Object {
            "__html": "Alpha",
          }
        }
        tabIndex="0"
      />
      <div>
        <br />
        <h4
          tabIndex="0"
        >
          Consumer Complaint Narrative
        </h4>
        <span
          className="body-copy"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Oh baby you. Got what I need",
            }
          }
          tabIndex="0"
        />
      </div>
    </div>
  </div>
</li>
`;

exports[`initial state hides the section when there is no sub-product 1`] = `
<li
  className="card-container"
>
  <div
    className="card"
  >
    <div
      className="card-left layout-column"
    >
      <h3
        className="to-detail"
      >
        <a
          aria-label="Complaint 9 9 9 9 0 9 0 9"
          href="detail/99990909"
        >
          99990909
        </a>
      </h3>
      <h4
        tabIndex="0"
      >
        Company name
      </h4>
      <span
        className="body-copy"
        dangerouslySetInnerHTML={
          Object {
            "__html": "ABC Corp",
          }
        }
        tabIndex="0"
      />
      <br />
      <h4
        tabIndex="0"
      >
        Company response to consumer
      </h4>
      <span
        className="body-copy"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Ipsum",
          }
        }
        tabIndex="0"
      />
      <br />
      <h4
        tabIndex="0"
      >
        Timely response?
      </h4>
      <span
        className="body-copy"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Yes",
          }
        }
        tabIndex="0"
      />
    </div>
    <div
      className="card-right layout-column"
    >
      <div
        className="layout-row"
      >
        <div
          className="layout-row"
        >
          <h4
            tabIndex="0"
          >
            Date received:
          </h4>
          <span
            className="body-copy"
          >
            <span>
              2/3/2013
            </span>
          </span>
        </div>
        <div
          className="spacer"
        />
        <div
          className="layout-row"
        >
          <h4
            tabIndex="0"
          >
            Consumer's state:
          </h4>
          <span
            className="body-copy"
            dangerouslySetInnerHTML={
              Object {
                "__html": "DC",
              }
            }
            tabIndex="0"
          />
        </div>
      </div>
      <br />
      <h4
        tabIndex="0"
      >
        Product
      </h4>
      <h3
        dangerouslySetInnerHTML={
          Object {
            "__html": "Beta",
          }
        }
        tabIndex="0"
      />
      <br />
      <h4
        tabIndex="0"
      >
        Issue
      </h4>
      <h3
        dangerouslySetInnerHTML={
          Object {
            "__html": "Alpha",
          }
        }
        tabIndex="0"
      />
      <div
        className="layout-row"
      >
        <span
          className="body-copy subitem"
          tabIndex="0"
        >
          Sub-issue:
        </span>
        <span
          className="body-copy"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Gamma",
            }
          }
          tabIndex="0"
        />
      </div>
      <div>
        <br />
        <h4
          tabIndex="0"
        >
          Consumer Complaint Narrative
        </h4>
        <span
          className="body-copy"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Oh baby you. Got what I need",
            }
          }
          tabIndex="0"
        />
      </div>
    </div>
  </div>
</li>
`;

exports[`initial state includes an overflow link when the narrative is long 1`] = `
<li
  className="card-container"
>
  <div
    className="card"
  >
    <div
      className="card-left layout-column"
    >
      <h3
        className="to-detail"
      >
        <a
          aria-label="Complaint 9 9 9 9 0 9 0 9"
          href="detail/99990909"
        >
          99990909
        </a>
      </h3>
      <h4
        tabIndex="0"
      >
        Company name
      </h4>
      <span
        className="body-copy"
        dangerouslySetInnerHTML={
          Object {
            "__html": "ABC Corp",
          }
        }
        tabIndex="0"
      />
      <br />
      <h4
        tabIndex="0"
      >
        Company response to consumer
      </h4>
      <span
        className="body-copy"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Ipsum",
          }
        }
        tabIndex="0"
      />
      <br />
      <h4
        tabIndex="0"
      >
        Timely response?
      </h4>
      <span
        className="body-copy"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Yes",
          }
        }
        tabIndex="0"
      />
    </div>
    <div
      className="card-right layout-column"
    >
      <div
        className="layout-row"
      >
        <div
          className="layout-row"
        >
          <h4
            tabIndex="0"
          >
            Date received:
          </h4>
          <span
            className="body-copy"
          >
            <span>
              2/3/2013
            </span>
          </span>
        </div>
        <div
          className="spacer"
        />
        <div
          className="layout-row"
        >
          <h4
            tabIndex="0"
          >
            Consumer's state:
          </h4>
          <span
            className="body-copy"
            dangerouslySetInnerHTML={
              Object {
                "__html": "DC",
              }
            }
            tabIndex="0"
          />
        </div>
      </div>
      <br />
      <h4
        tabIndex="0"
      >
        Product
      </h4>
      <h3
        dangerouslySetInnerHTML={
          Object {
            "__html": "Beta",
          }
        }
        tabIndex="0"
      />
      <div
        className="layout-row"
      >
        <span
          className="body-copy subitem"
          tabIndex="0"
        >
          Sub-product:
        </span>
        <span
          className="body-copy"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Delta",
            }
          }
          tabIndex="0"
        />
      </div>
      <br />
      <h4
        tabIndex="0"
      >
        Issue
      </h4>
      <h3
        dangerouslySetInnerHTML={
          Object {
            "__html": "Alpha",
          }
        }
        tabIndex="0"
      />
      <div
        className="layout-row"
      >
        <span
          className="body-copy subitem"
          tabIndex="0"
        >
          Sub-issue:
        </span>
        <span
          className="body-copy"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Gamma",
            }
          }
          tabIndex="0"
        />
      </div>
      <div>
        <br />
        <h4
          tabIndex="0"
        >
          Consumer Complaint Narrative
        </h4>
        <span
          className="body-copy"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Call me Ishmael. Some years ago- never mind how long precisely- having little or no money in my purse, and nothing particular to interest me on shore, I thought I would sail about a little and see the watery part of the world. It is a way I have of driving off the spleen and regulating the circulati",
            }
          }
          tabIndex="0"
        />
        <span>
           
          <a
            href="detail/99990909"
          >
            [...]
          </a>
        </span>
      </div>
    </div>
  </div>
</li>
`;

exports[`initial state removes <em> highlighting tags effectively from text 1`] = `
<li
  className="card-container"
>
  <div
    className="card"
  >
    <div
      className="card-left layout-column"
    >
      <h3
        className="to-detail"
      >
        <a
          aria-label="Complaint 9 9 9 9 0 9 0 9"
          href="detail/99990909"
        >
          99990909
        </a>
      </h3>
      <h4
        tabIndex="0"
      >
        Company name
      </h4>
      <span
        className="body-copy"
        dangerouslySetInnerHTML={
          Object {
            "__html": "ABC Corp",
          }
        }
        tabIndex="0"
      />
      <br />
      <h4
        tabIndex="0"
      >
        Company response to consumer
      </h4>
      <span
        className="body-copy"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Ipsum",
          }
        }
        tabIndex="0"
      />
      <br />
      <h4
        tabIndex="0"
      >
        Timely response?
      </h4>
      <span
        className="body-copy"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Yes",
          }
        }
        tabIndex="0"
      />
    </div>
    <div
      className="card-right layout-column"
    >
      <div
        className="layout-row"
      >
        <div
          className="layout-row"
        >
          <h4
            tabIndex="0"
          >
            Date received:
          </h4>
          <span
            className="body-copy"
          >
            <span>
              2/3/2013
            </span>
          </span>
        </div>
        <div
          className="spacer"
        />
        <div
          className="layout-row"
        >
          <h4
            tabIndex="0"
          >
            Consumer's state:
          </h4>
          <span
            className="body-copy"
            dangerouslySetInnerHTML={
              Object {
                "__html": "DC",
              }
            }
            tabIndex="0"
          />
        </div>
      </div>
      <br />
      <h4
        tabIndex="0"
      >
        Product
      </h4>
      <h3
        dangerouslySetInnerHTML={
          Object {
            "__html": "Beta",
          }
        }
        tabIndex="0"
      />
      <div
        className="layout-row"
      >
        <span
          className="body-copy subitem"
          tabIndex="0"
        >
          Sub-product:
        </span>
        <span
          className="body-copy"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Delta",
            }
          }
          tabIndex="0"
        />
      </div>
      <br />
      <h4
        tabIndex="0"
      >
        Issue
      </h4>
      <h3
        dangerouslySetInnerHTML={
          Object {
            "__html": "Alpha",
          }
        }
        tabIndex="0"
      />
      <div
        className="layout-row"
      >
        <span
          className="body-copy subitem"
          tabIndex="0"
        >
          Sub-issue:
        </span>
        <span
          className="body-copy"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Gamma",
            }
          }
          tabIndex="0"
        />
      </div>
      <div>
        <br />
        <h4
          tabIndex="0"
        >
          Consumer Complaint Narrative
        </h4>
        <span
          className="body-copy"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Oh baby you. Got what I need",
            }
          }
          tabIndex="0"
        />
      </div>
    </div>
  </div>
</li>
`;

exports[`initial state renders without crashing 1`] = `
<li
  className="card-container"
>
  <div
    className="card"
  >
    <div
      className="card-left layout-column"
    >
      <h3
        className="to-detail"
      >
        <a
          aria-label="Complaint 9 9 9 9 0 9 0 9"
          href="detail/99990909"
        >
          99990909
        </a>
      </h3>
      <h4
        tabIndex="0"
      >
        Company name
      </h4>
      <span
        className="body-copy"
        dangerouslySetInnerHTML={
          Object {
            "__html": "ABC Corp",
          }
        }
        tabIndex="0"
      />
      <br />
      <h4
        tabIndex="0"
      >
        Company response to consumer
      </h4>
      <span
        className="body-copy"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Ipsum",
          }
        }
        tabIndex="0"
      />
      <br />
      <h4
        tabIndex="0"
      >
        Timely response?
      </h4>
      <span
        className="body-copy"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Yes",
          }
        }
        tabIndex="0"
      />
    </div>
    <div
      className="card-right layout-column"
    >
      <div
        className="layout-row"
      >
        <div
          className="layout-row"
        >
          <h4
            tabIndex="0"
          >
            Date received:
          </h4>
          <span
            className="body-copy"
          >
            <span>
              2/3/2013
            </span>
          </span>
        </div>
        <div
          className="spacer"
        />
        <div
          className="layout-row"
        >
          <h4
            tabIndex="0"
          >
            Consumer's state:
          </h4>
          <span
            className="body-copy"
            dangerouslySetInnerHTML={
              Object {
                "__html": "DC",
              }
            }
            tabIndex="0"
          />
        </div>
      </div>
      <br />
      <h4
        tabIndex="0"
      >
        Product
      </h4>
      <h3
        dangerouslySetInnerHTML={
          Object {
            "__html": "Beta",
          }
        }
        tabIndex="0"
      />
      <div
        className="layout-row"
      >
        <span
          className="body-copy subitem"
          tabIndex="0"
        >
          Sub-product:
        </span>
        <span
          className="body-copy"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Delta",
            }
          }
          tabIndex="0"
        />
      </div>
      <br />
      <h4
        tabIndex="0"
      >
        Issue
      </h4>
      <h3
        dangerouslySetInnerHTML={
          Object {
            "__html": "Alpha",
          }
        }
        tabIndex="0"
      />
      <div
        className="layout-row"
      >
        <span
          className="body-copy subitem"
          tabIndex="0"
        >
          Sub-issue:
        </span>
        <span
          className="body-copy"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Gamma",
            }
          }
          tabIndex="0"
        />
      </div>
      <div>
        <br />
        <h4
          tabIndex="0"
        >
          Consumer Complaint Narrative
        </h4>
        <span
          className="body-copy"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Oh baby you. Got what I need",
            }
          }
          tabIndex="0"
        />
      </div>
    </div>
  </div>
</li>
`;
